AntlrVersion/BonusParser.java
// Generated from Bonus.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BonusParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, BOOL=15, VAR=16, NUMBER=17, 
		WS=18;
	public static final int
		RULE_mainNode = 0, RULE_parse = 1, RULE_bracketNode = 2, RULE_divNode = 3, 
		RULE_plusNode = 4, RULE_notNode = 5, RULE_greaterNode = 6, RULE_andNode = 7, 
		RULE_aexpr = 8, RULE_bexpr = 9, RULE_seqNode = 10, RULE_blockNode = 11, 
		RULE_assigNode = 12, RULE_ifNode = 13, RULE_whileNode = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"mainNode", "parse", "bracketNode", "divNode", "plusNode", "notNode", 
			"greaterNode", "andNode", "aexpr", "bexpr", "seqNode", "blockNode", "assigNode", 
			"ifNode", "whileNode"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'/'", "'+'", "'!'", "'>'", "'&&'", "'{'", "'}'", 
			"'='", "';'", "'if'", "'else'", "'while'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "BOOL", "VAR", "NUMBER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Bonus.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BonusParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class MainNodeContext extends ParserRuleContext {
		public ParseContext parse() {
			return getRuleContext(ParseContext.class,0);
		}
		public MainNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainNode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BonusListener ) ((BonusListener)listener).enterMainNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BonusListener ) ((BonusListener)listener).exitMainNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BonusVisitor ) return ((BonusVisitor<? extends T>)visitor).visitMainNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainNodeContext mainNode() throws RecognitionException {
		MainNodeContext _localctx = new MainNodeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mainNode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			parse();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParseContext extends ParserRuleContext {
		public SeqNodeContext seqNode() {
			return getRuleContext(SeqNodeContext.class,0);
		}
		public TerminalNode EOF() { return getToken(BonusParser.EOF, 0); }
		public AssigNodeContext assigNode() {
			return getRuleContext(AssigNodeContext.class,0);
		}
		public IfNodeContext ifNode() {
			return getRuleContext(IfNodeContext.class,0);
		}
		public WhileNodeContext whileNode() {
			return getRuleContext(WhileNodeContext.class,0);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BonusListener ) ((BonusListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BonusListener ) ((BonusListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BonusVisitor ) return ((BonusVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_parse);
		try {
			setState(44);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(32);
				seqNode();
				setState(33);
				match(EOF);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(35);
				assigNode();
				setState(36);
				match(EOF);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(38);
				ifNode();
				setState(39);
				match(EOF);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(41);
				whileNode();
				setState(42);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BracketNodeContext extends ParserRuleContext {
		public AexprContext aexpr() {
			return getRuleContext(AexprContext.class,0);
		}
		public BexprContext bexpr() {
			return getRuleContext(BexprContext.class,0);
		}
		public BracketNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bracketNode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BonusListener ) ((BonusListener)listener).enterBracketNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BonusListener ) ((BonusListener)listener).exitBracketNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BonusVisitor ) return ((BonusVisitor<? extends T>)visitor).visitBracketNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BracketNodeContext bracketNode() throws RecognitionException {
		BracketNodeContext _localctx = new BracketNodeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_bracketNode);
		try {
			setState(54);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(46);
				match(T__0);
				setState(47);
				aexpr();
				setState(48);
				match(T__1);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(50);
				match(T__0);
				setState(51);
				bexpr();
				setState(52);
				match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DivNodeContext extends ParserRuleContext {
		public List<BracketNodeContext> bracketNode() {
			return getRuleContexts(BracketNodeContext.class);
		}
		public BracketNodeContext bracketNode(int i) {
			return getRuleContext(BracketNodeContext.class,i);
		}
		public List<TerminalNode> VAR() { return getTokens(BonusParser.VAR); }
		public TerminalNode VAR(int i) {
			return getToken(BonusParser.VAR, i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(BonusParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(BonusParser.NUMBER, i);
		}
		public List<DivNodeContext> divNode() {
			return getRuleContexts(DivNodeContext.class);
		}
		public DivNodeContext divNode(int i) {
			return getRuleContext(DivNodeContext.class,i);
		}
		public DivNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_divNode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BonusListener ) ((BonusListener)listener).enterDivNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BonusListener ) ((BonusListener)listener).exitDivNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BonusVisitor ) return ((BonusVisitor<? extends T>)visitor).visitDivNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DivNodeContext divNode() throws RecognitionException {
		return divNode(0);
	}

	private DivNodeContext divNode(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		DivNodeContext _localctx = new DivNodeContext(_ctx, _parentState);
		DivNodeContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_divNode, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(60);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				{
				setState(57);
				bracketNode();
				}
				break;
			case VAR:
				{
				setState(58);
				match(VAR);
				}
				break;
			case NUMBER:
				{
				setState(59);
				match(NUMBER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(62);
			match(T__2);
			setState(66);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				{
				setState(63);
				bracketNode();
				}
				break;
			case VAR:
				{
				setState(64);
				match(VAR);
				}
				break;
			case NUMBER:
				{
				setState(65);
				match(NUMBER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
			_ctx.stop = _input.LT(-1);
			setState(78);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new DivNodeContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_divNode);
					setState(68);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(69);
					match(T__2);
					setState(74);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						setState(70);
						bracketNode();
						}
						break;
					case 2:
						{
						setState(71);
						divNode(0);
						}
						break;
					case 3:
						{
						setState(72);
						match(VAR);
						}
						break;
					case 4:
						{
						setState(73);
						match(NUMBER);
						}
						break;
					}
					}
					} 
				}
				setState(80);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class PlusNodeContext extends ParserRuleContext {
		public List<BracketNodeContext> bracketNode() {
			return getRuleContexts(BracketNodeContext.class);
		}
		public BracketNodeContext bracketNode(int i) {
			return getRuleContext(BracketNodeContext.class,i);
		}
		public List<DivNodeContext> divNode() {
			return getRuleContexts(DivNodeContext.class);
		}
		public DivNodeContext divNode(int i) {
			return getRuleContext(DivNodeContext.class,i);
		}
		public List<TerminalNode> VAR() { return getTokens(BonusParser.VAR); }
		public TerminalNode VAR(int i) {
			return getToken(BonusParser.VAR, i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(BonusParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(BonusParser.NUMBER, i);
		}
		public PlusNodeContext plusNode() {
			return getRuleContext(PlusNodeContext.class,0);
		}
		public PlusNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plusNode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BonusListener ) ((BonusListener)listener).enterPlusNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BonusListener ) ((BonusListener)listener).exitPlusNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BonusVisitor ) return ((BonusVisitor<? extends T>)visitor).visitPlusNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlusNodeContext plusNode() throws RecognitionException {
		return plusNode(0);
	}

	private PlusNodeContext plusNode(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		PlusNodeContext _localctx = new PlusNodeContext(_ctx, _parentState);
		PlusNodeContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_plusNode, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(86);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(82);
				bracketNode();
				}
				break;
			case 2:
				{
				setState(83);
				divNode(0);
				}
				break;
			case 3:
				{
				setState(84);
				match(VAR);
				}
				break;
			case 4:
				{
				setState(85);
				match(NUMBER);
				}
				break;
			}
			setState(88);
			match(T__3);
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(89);
				bracketNode();
				}
				break;
			case 2:
				{
				setState(90);
				divNode(0);
				}
				break;
			case 3:
				{
				setState(91);
				match(VAR);
				}
				break;
			case 4:
				{
				setState(92);
				match(NUMBER);
				}
				break;
			}
			}
			_ctx.stop = _input.LT(-1);
			setState(105);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new PlusNodeContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_plusNode);
					setState(95);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(96);
					match(T__3);
					setState(101);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
					case 1:
						{
						setState(97);
						bracketNode();
						}
						break;
					case 2:
						{
						setState(98);
						divNode(0);
						}
						break;
					case 3:
						{
						setState(99);
						match(VAR);
						}
						break;
					case 4:
						{
						setState(100);
						match(NUMBER);
						}
						break;
					}
					}
					} 
				}
				setState(107);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class NotNodeContext extends ParserRuleContext {
		public BexprContext bexpr() {
			return getRuleContext(BexprContext.class,0);
		}
		public NotNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_notNode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BonusListener ) ((BonusListener)listener).enterNotNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BonusListener ) ((BonusListener)listener).exitNotNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BonusVisitor ) return ((BonusVisitor<? extends T>)visitor).visitNotNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NotNodeContext notNode() throws RecognitionException {
		NotNodeContext _localctx = new NotNodeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_notNode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(T__4);
			setState(109);
			bexpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GreaterNodeContext extends ParserRuleContext {
		public AexprContext aexpr() {
			return getRuleContext(AexprContext.class,0);
		}
		public TerminalNode NUMBER() { return getToken(BonusParser.NUMBER, 0); }
		public TerminalNode VAR() { return getToken(BonusParser.VAR, 0); }
		public BracketNodeContext bracketNode() {
			return getRuleContext(BracketNodeContext.class,0);
		}
		public PlusNodeContext plusNode() {
			return getRuleContext(PlusNodeContext.class,0);
		}
		public DivNodeContext divNode() {
			return getRuleContext(DivNodeContext.class,0);
		}
		public GreaterNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_greaterNode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BonusListener ) ((BonusListener)listener).enterGreaterNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BonusListener ) ((BonusListener)listener).exitGreaterNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BonusVisitor ) return ((BonusVisitor<? extends T>)visitor).visitGreaterNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GreaterNodeContext greaterNode() throws RecognitionException {
		GreaterNodeContext _localctx = new GreaterNodeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_greaterNode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(111);
				match(NUMBER);
				}
				break;
			case 2:
				{
				setState(112);
				match(VAR);
				}
				break;
			case 3:
				{
				setState(113);
				bracketNode();
				}
				break;
			case 4:
				{
				setState(114);
				plusNode(0);
				}
				break;
			case 5:
				{
				setState(115);
				divNode(0);
				}
				break;
			}
			setState(118);
			match(T__5);
			setState(119);
			aexpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AndNodeContext extends ParserRuleContext {
		public List<BracketNodeContext> bracketNode() {
			return getRuleContexts(BracketNodeContext.class);
		}
		public BracketNodeContext bracketNode(int i) {
			return getRuleContext(BracketNodeContext.class,i);
		}
		public List<NotNodeContext> notNode() {
			return getRuleContexts(NotNodeContext.class);
		}
		public NotNodeContext notNode(int i) {
			return getRuleContext(NotNodeContext.class,i);
		}
		public List<GreaterNodeContext> greaterNode() {
			return getRuleContexts(GreaterNodeContext.class);
		}
		public GreaterNodeContext greaterNode(int i) {
			return getRuleContext(GreaterNodeContext.class,i);
		}
		public List<TerminalNode> BOOL() { return getTokens(BonusParser.BOOL); }
		public TerminalNode BOOL(int i) {
			return getToken(BonusParser.BOOL, i);
		}
		public AndNodeContext andNode() {
			return getRuleContext(AndNodeContext.class,0);
		}
		public AndNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_andNode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BonusListener ) ((BonusListener)listener).enterAndNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BonusListener ) ((BonusListener)listener).exitAndNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BonusVisitor ) return ((BonusVisitor<? extends T>)visitor).visitAndNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AndNodeContext andNode() throws RecognitionException {
		return andNode(0);
	}

	private AndNodeContext andNode(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		AndNodeContext _localctx = new AndNodeContext(_ctx, _parentState);
		AndNodeContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_andNode, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(126);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(122);
				bracketNode();
				}
				break;
			case 2:
				{
				setState(123);
				notNode();
				}
				break;
			case 3:
				{
				setState(124);
				greaterNode();
				}
				break;
			case 4:
				{
				setState(125);
				match(BOOL);
				}
				break;
			}
			setState(128);
			match(T__6);
			setState(133);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				setState(129);
				bracketNode();
				}
				break;
			case 2:
				{
				setState(130);
				notNode();
				}
				break;
			case 3:
				{
				setState(131);
				greaterNode();
				}
				break;
			case 4:
				{
				setState(132);
				match(BOOL);
				}
				break;
			}
			}
			_ctx.stop = _input.LT(-1);
			setState(145);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new AndNodeContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_andNode);
					setState(135);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(136);
					match(T__6);
					setState(141);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
					case 1:
						{
						setState(137);
						bracketNode();
						}
						break;
					case 2:
						{
						setState(138);
						notNode();
						}
						break;
					case 3:
						{
						setState(139);
						greaterNode();
						}
						break;
					case 4:
						{
						setState(140);
						match(BOOL);
						}
						break;
					}
					}
					} 
				}
				setState(147);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class AexprContext extends ParserRuleContext {
		public BracketNodeContext bracketNode() {
			return getRuleContext(BracketNodeContext.class,0);
		}
		public DivNodeContext divNode() {
			return getRuleContext(DivNodeContext.class,0);
		}
		public PlusNodeContext plusNode() {
			return getRuleContext(PlusNodeContext.class,0);
		}
		public TerminalNode NUMBER() { return getToken(BonusParser.NUMBER, 0); }
		public TerminalNode VAR() { return getToken(BonusParser.VAR, 0); }
		public AexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aexpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BonusListener ) ((BonusListener)listener).enterAexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BonusListener ) ((BonusListener)listener).exitAexpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BonusVisitor ) return ((BonusVisitor<? extends T>)visitor).visitAexpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AexprContext aexpr() throws RecognitionException {
		AexprContext _localctx = new AexprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_aexpr);
		try {
			setState(153);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(148);
				bracketNode();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(149);
				divNode(0);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(150);
				plusNode(0);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(151);
				match(NUMBER);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(152);
				match(VAR);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BexprContext extends ParserRuleContext {
		public BracketNodeContext bracketNode() {
			return getRuleContext(BracketNodeContext.class,0);
		}
		public AndNodeContext andNode() {
			return getRuleContext(AndNodeContext.class,0);
		}
		public NotNodeContext notNode() {
			return getRuleContext(NotNodeContext.class,0);
		}
		public GreaterNodeContext greaterNode() {
			return getRuleContext(GreaterNodeContext.class,0);
		}
		public TerminalNode VAR() { return getToken(BonusParser.VAR, 0); }
		public TerminalNode BOOL() { return getToken(BonusParser.BOOL, 0); }
		public BexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bexpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BonusListener ) ((BonusListener)listener).enterBexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BonusListener ) ((BonusListener)listener).exitBexpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BonusVisitor ) return ((BonusVisitor<? extends T>)visitor).visitBexpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BexprContext bexpr() throws RecognitionException {
		BexprContext _localctx = new BexprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_bexpr);
		try {
			setState(161);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(155);
				bracketNode();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(156);
				andNode(0);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(157);
				notNode();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(158);
				greaterNode();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(159);
				match(VAR);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(160);
				match(BOOL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
